--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -23,6 +23,6 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx", "src/app/(admin)/dashboard/properties/page.jsx", "src/app/(admin)/dashboard/users/page.jsx"],
   "exclude": ["node_modules"]
 }
