Enhance admin dashboard: add event page to TypeScript configuration, implement category editing functionality, and improve layout for user, package, coupon, and transaction pages with new components for better organization and user experience.

--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -23,6 +23,14 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx", "src/app/(admin)/dashboard/properties/page.jsx", "src/app/(admin)/dashboard/users/page.jsx"],
+  "include": [
+    "next-env.d.ts",
+    ".next/types/**/*.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/app/(admin)/dashboard/properties/page.jsx",
+    "src/app/(admin)/dashboard/users/page.jsx",
+    "src/app/(admin)/dashboard/events/page.jsx"
+  ],
   "exclude": ["node_modules"]
 }
