Refactor backend and frontend components: update server configuration to include new models and routes, enhance authentication middleware with JWT validation, and implement new package and category management features in the admin dashboard. Update package dependencies and improve file upload handling.

--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -31,6 +31,6 @@
     "src/app/(admin)/dashboard/properties/page.jsx",
     "src/app/(admin)/dashboard/users/page.jsx",
     "src/app/(admin)/dashboard/events/page.jsx"
-  ],
+, "src/app/(admin)/admin/login/page.jsx"  ],
   "exclude": ["node_modules"]
 }
