--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "create-admin": "node scripts/createAdmin.js",
-    "create-admin-interactive": "node scripts/createAdminInteractive.js"
+    "create-admin-interactive": "node scripts/createAdminInteractive.js",
+    "vercel-build": "echo 'Build complete'"
   },
   "keywords": [],
   "author": "",
