Implement OAuth authentication: add Google and Facebook login capabilities, update user model to support OAuth accounts, enhance auth controller with linking and unlinking accounts, and modify routes for OAuth callbacks. Update environment configuration for OAuth credentials and enhance admin dashboard with new gallery and blog management features.

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -26,6 +26,9 @@
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.11.0",
