--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@tiptap/extension-link": "^3.6.5",
+    "@tiptap/extension-text-align": "^3.6.5",
+    "@tiptap/react": "^3.6.5",
+    "@tiptap/starter-kit": "^3.6.5",
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
