Update backend and frontend: add UUID package for unique identifier generation, implement visitor tracking middleware, enhance category and package management with improved data handling, and refine admin dashboard components for better user experience. Update package dependencies and improve UI responsiveness.

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,6 +1,7 @@
 {
   "name": "back-end",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
@@ -31,6 +32,7 @@
     "passport-google-oauth20": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^13.0.0",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   },
