--- a/front-end/package.json
+++ b/front-end/package.json
@@ -27,8 +27,10 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-slick": "^0.31.0",
+    "recharts": "^3.2.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^12.0.2",
+    "uuid": "^13.0.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
