--- a/front-end/package.json
+++ b/front-end/package.json
@@ -35,7 +35,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "24.5.2",
-    "@types/react": "19.1.13",
+    "@types/react": "^19.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4"
